--- a/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
+++ b/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:34:14 GMT
+    - Sat, 28 Oct 2017 15:03:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=52fmks0v1ku4rg4nb98k5228f6; path=/
+    - PHPSESSID=s66c6vfhv3s686vnapam8u2oe5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:34:14 GMT
+recorded_at: Sat, 28 Oct 2017 15:03:08 GMT
