--- a/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
+++ b/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 13:45:54 GMT
+    - Wed, 01 Nov 2017 10:22:36 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=14oajcg81ht34ic67rceqa00p3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 13:45:55 GMT
+recorded_at: Wed, 01 Nov 2017 10:22:37 GMT
