--- a/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
+++ b/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 13:47:14 GMT
+    - Wed, 01 Nov 2017 10:27:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=e503lb94e80se84fsmu9o3idg0; path=/
+    - PHPSESSID=08qr156blglh4rb6s6on7p93k3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 13:47:15 GMT
+recorded_at: Wed, 01 Nov 2017 10:27:24 GMT
