--- a/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
+++ b/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 14:06:51 GMT
+    - Wed, 01 Nov 2017 10:28:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0lt422rrghfqqivmaon8tusv95; path=/
+    - PHPSESSID=kua6al2dnt6gk7chnt4iq7c5e7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 14:06:52 GMT
+recorded_at: Wed, 01 Nov 2017 10:28:51 GMT
