--- a/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
+++ b/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 15:07:18 GMT
+    - Wed, 01 Nov 2017 10:35:57 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=5ngk2ir2f7fturi78oq62f27t6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 15:07:19 GMT
+recorded_at: Wed, 01 Nov 2017 10:35:57 GMT
