--- a/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
+++ b/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 14:42:41 GMT
+    - Wed, 01 Nov 2017 10:41:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=id7rg1cjk6vl910rehfnure9j3; path=/
+    - PHPSESSID=ipscjiv3at887sdhppf19iuub0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 14:42:42 GMT
+recorded_at: Wed, 01 Nov 2017 10:41:54 GMT
