--- a/house.gov.by/517994db117c9e65235905611143905242402edd.yml
+++ b/house.gov.by/517994db117c9e65235905611143905242402edd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 14:05:45 GMT
+    - Wed, 01 Nov 2017 10:44:32 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=8fvsdtnbdokvhd1vj8eovc3s03; path=/
+    - PHPSESSID=6auec98r67app2jtltqth9aek1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 14:05:46 GMT
+recorded_at: Wed, 01 Nov 2017 10:44:33 GMT
