--- a/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
+++ b/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 14:22:12 GMT
+    - Wed, 01 Nov 2017 11:06:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=mo3s7j1fh1m68u619anpsedte2; path=/
+    - PHPSESSID=n37m8tbr315g6s8l993pd030t4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 14:22:12 GMT
+recorded_at: Wed, 01 Nov 2017 11:06:51 GMT
