--- a/house.gov.by/0890fe2c7ba5e76e3a7d44d01ccfafdba0e5e95d.yml
+++ b/house.gov.by/0890fe2c7ba5e76e3a7d44d01ccfafdba0e5e95d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:23:16 GMT
+    - Wed, 01 Nov 2017 15:40:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=am14057cmhvsr9iubtv549ouj4; path=/
+    - PHPSESSID=fdsud7dsks9jjhuueqmj16b1i1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:23:16 GMT
+recorded_at: Wed, 01 Nov 2017 15:40:31 GMT
