--- a/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
+++ b/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:45:52 GMT
+    - Wed, 01 Nov 2017 15:46:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=3pe931lqq92707hm9kc0idu2a2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:45:52 GMT
+recorded_at: Wed, 01 Nov 2017 15:46:53 GMT
