--- a/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
+++ b/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 14:45:23 GMT
+    - Wed, 01 Nov 2017 23:02:14 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=m60fk80ha1jhn9oasiijirli72; path=/
+    - PHPSESSID=ujeu80re4qvtj8j0q53d3u5id5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 14:45:24 GMT
+recorded_at: Wed, 01 Nov 2017 23:02:15 GMT
