--- a/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
+++ b/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 14:24:53 GMT
+    - Wed, 01 Nov 2017 23:03:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=j4n473m7bhrs7b6lgm6094ahv2; path=/
+    - PHPSESSID=5vp5squbngetnc9cqsvu0s6ek7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 14:24:53 GMT
+recorded_at: Wed, 01 Nov 2017 23:03:34 GMT
