--- a/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
+++ b/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 15:18:12 GMT
+    - Wed, 01 Nov 2017 23:04:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=cpc8ahaf8o0sni6uabvdvgtsi2; path=/
+    - PHPSESSID=v8cs26dv7k9mi66a68c08d88l6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 15:18:13 GMT
+recorded_at: Wed, 01 Nov 2017 23:04:02 GMT
