--- a/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
+++ b/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 15:16:09 GMT
+    - Wed, 01 Nov 2017 23:12:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=jbb2bln6relp3ed16otsdtpjq0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 15:16:09 GMT
+recorded_at: Wed, 01 Nov 2017 23:12:09 GMT
