--- a/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
+++ b/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 15:17:02 GMT
+    - Wed, 01 Nov 2017 23:47:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=3ts5qpudc5f11347jt795thjv7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 15:17:02 GMT
+recorded_at: Wed, 01 Nov 2017 23:47:19 GMT
