--- a/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
+++ b/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 15:42:31 GMT
+    - Wed, 01 Nov 2017 23:59:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=22qu2r06ufmlmrrtbqgn90tlt3; path=/
+    - PHPSESSID=jlsangcavk2p692uumsae6hv23; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 15:42:32 GMT
+recorded_at: Wed, 01 Nov 2017 23:59:46 GMT
