--- a/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
+++ b/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 14:40:40 GMT
+    - Thu, 02 Nov 2017 00:13:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=urcame7msgbf1lv5s91a0knjl4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 14:40:40 GMT
+recorded_at: Thu, 02 Nov 2017 00:13:20 GMT
