--- a/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
+++ b/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 14:42:55 GMT
+    - Thu, 02 Nov 2017 00:13:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=k1hbp5259futricblfbv915k94; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 14:42:57 GMT
+recorded_at: Thu, 02 Nov 2017 00:13:52 GMT
